auto-test/tests/chapter_18/invalid_types/extra_credit/scalar_required/switch_on_union.c

union s {
    int i;
};

int main(void) {
    union s x = {1};
    switch (x) {
        case 1:
            return 0;
        default:
            return 1;
    }
}